# Barinfrick-compiler

./: CMakeLists.txt  README.md
src/: main.cpp
